Fix Tooltip icon not showing
Rename class because Bootstrap has a class named tooltip and is overriding its opacity to 0

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -570,7 +570,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
 /* Payment */ 
 
-.tooltip {
+.tooltipp {
   opacity:1
 }
  
@@ -589,7 +589,7 @@ input[type="number"]::-webkit-inner-spin-button {
   height: 170px;
 }
  
-.tooltip:hover + .tooltip-content {
+.tooltipp:hover + .tooltip-content {
   display:block;
   top: -10px;
   left: 35px;
